--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MeNotes</string>
     <string name="my_notes_title">My Notes</string>
     <string name="add_btt_description">Add new note</string>
+    <string name="new_note_title">Title</string>
+    <string name="new_note_content">Content</string>
+    <string name="new_note_save">Save</string>
 </resources>
