--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="add_btt_description">Add new note</string>
     <string name="new_note_title">Title</string>
     <string name="new_note_content">Content</string>
-    <string name="new_note_save">Save</string>
+    <string name="new_note_write_here">Write here</string>
 </resources>
