--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MeNotes</string>
+    <string name="splash_caption">Welcome back!</string>
     <string name="my_notes_title">My Notes</string>
     <string name="add_btt_description">Add new note</string>
     <string name="new_note_title">Title</string>
